<resources>
    <string name="app_name">Allergen Detector</string>
    <string name="title_lists">Lists</string>
    <string name="title_scan">Scan</string>
    <string name="title_profile">Profile</string>
    <string name="profile_name_default_placeholder">Default Profile Name Placeholder</string>
    <string name="profile_button_allergens">Allergens</string>
    <string name="profile_button_settings">Settings</string>
    <string name="profile_button_statistics">Statistics</string>
    <string name="placeholder">Placeholder</string>
    <string name="profile_avatar">Profile Avatar</string>
    <string name="edit_allergen">Edit Allergen</string>
    <string name="remove_allergen">Remove Allergen</string>
    <string name="allergen_severity">Allergen severity</string>
    <string name="title_allergen_list">Allergen List</string>
    <string name="title_photo">Photo</string>
    <string name="retake_button">Retake</string>
    <string name="use_button">Use</string>
    <string name="title_result">Scan Result</string>
    <string name="title_result_det">Detection Result</string>
    <string name="return_button">Return</string>
    <string name="proceed_button">Proceed</string>
    <string name="crop_button">Crop</string>
    <string name="edit_button">Edit</string>
    <string name="image_description">Resulting image of the scan</string>
    <string name="title_edit_text">Edit Text</string>
    <string name="share_button">Share</string>
    <string name="save_button">Save</string>
    <string name="add_allergen">Add Allergen</string>
    <string name="go_back">Go Back</string>
    <string name="logout">Logout</string>
    <string name="allergen">Allergen</string>
    <string name="mild">Mild</string>
    <string name="severe">Severe</string>
    <string name="open_gallery_button">Open Gallery</string>
    <string name="recent_scans_button">Recent Scans</string>
    <string name="default_web_client_id">AIzaSyCMligrhppYbvePujLA9YWZ_r6IxNe7TC8</string>
    <string name="login_message">Already have an account? Login</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="register_message">Don\'t have an account yet? Register</string>
    <string name="google_login_button">Google Login</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="harmful_ingredients">HARMFUL INGREDIENTS:</string>
    <string name="no_harmful_ingredients">NO HARMFUL INGREDIENTS DETECTED</string>
    <string name="about_button">About</string>
    <string name="hide_hints_switch">Hide hints</string>
    <string name="dark_mode_switch">Dark mode</string>
    <string name="title_settings">Settings</string>
    <string name="change_avatar_button">Change Avatar</string>
    <string name="change_password_button">Change Password</string>
    <string name="change_language_button">Change Language</string>
    <string name="feedback_button">Feedback</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="cancel_button">Cancel</string>
    <string name="old_password_hint">Old Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="choose_from_gallery">Choose from Gallery…</string>
    <string name="title_product">Add Product</string>
    <string name="tag_format">#%1$s</string>
    <string name="harmful_tab">Harmful</string>
    <string name="harmless_tab">Harmless</string>
    <string name="enter_product_name">Enter product name…</string>
    <string name="possible_allergens">Possible allergens:</string>
    <string name="tags">Tags:</string>
    <string name="add_tag">Add</string>
    <string name="add_a_tag">Add a tag…</string>
    <string name="search_for_product">Search name/tag/category…</string>
    <string name="view_edit_product">View/Edit Product</string>
    <string name="ok_button">OK</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_button">Confirm</string>
    <string name="type_in_your_password_to_confirm_account_deletion">Type in your password to confirm account deletion.</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="recent_scans_title">Recent Scans</string>
    <string name="guidelines_title">Guidelines</string>
    <string name="welcome_to_allergen_detector">Welcome to Allergen Detector!</string>
    <string name="guideline_1">1. Add allergens to your profile</string>
    <string name="guideline_2">2. Scan a product</string>
    <string name="guideline_3">3. View your personalized list of products and search for something you can eat without a doubt</string>
    <string name="stay_safe_button">Stay Safe!</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="title_statistics">Statistics</string>
    <string name="total_scans">Scans Made:</string>
    <string name="week_year">Week\t\t\t\t\t\t\t\t\t\tYear</string>
    <string name="about_description"><![CDATA[We, the students of VIA University College - Aleksandrs Bistrovs & Maksims Fokins, have created this app as part of our final semester Bachelor project. The app is meant to provide the user with a possibility to scan ingredient labels of products and determine whether the user can or cannot eat this specific product based on their allergy profile. We hope you stay safe!]]></string>
    <string name="text_to_speech_switch">Text-to-Speech</string>
    <string name="text_to_speech_button">Text-to-speech button</string>
    <string name="crop_description">View that allows to crop an image</string>
</resources>